server/vault-ing.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ing
  namespace: vault
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    # alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: |
     {
       "Type": "redirect",
       "RedirectConfig": {
         "Protocol": "HTTPS",
         "Port": "443",
         "StatusCode": "HTTP_301"
       }
     }
    # alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:225953240914:certificate/8ea3601a-f6ae-4fa2-b897-051a10c02d4f
spec:
  rules:
    - host: "vault.zeroest.me"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect 
                port:
                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault
                port:
                  number: 8200
